--- a/index.html
+++ b/index.html
@@ -87,7 +87,10 @@
   </button>
 </div>
   
-
+<div class="input-container">
+    <button id="showBankListButton">Danh sách ngân hàng</button>
+</div>
+  
 
 <h2>Danh sách Ngân hàng</h2>
 
