--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 </div>
   
 <div class="input-container">
-    <button id="showBankListButton">Danh sách ngân hàng</button>
+    <button id="showBankListButton">Tải danh sách ngân hàng</button>
 </div>
   
 
