--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
     <div id="qrcode-container">
       <div id="qrcode"></div>
     </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
   
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/js/select2.min.js"></script>
