--- a/index.html
+++ b/index.html
@@ -88,8 +88,9 @@
 </div>
   
 <div class="input-container">
-    <button id="showBankListButton">Tải danh sách ngân hàng</button>
+    <button id="toggleBankListButton">Danh sách ngân hàng</button>
 </div>
+  
   
 
 <h2>Danh sách Ngân hàng</h2>
