--- a/index.html
+++ b/index.html
@@ -41,12 +41,20 @@
     </div>
   
   
-  
     <div class="input-container">
       <label for="accountNumber">Số tài khoản:</label>
       <input placeholder="VD: 0891000650891" type="text" id="accountNumber" name="accountNumber" readonly required>
     </div>
   
+
+    <div class="input-container">
+      <label for="AccountStatus">Trạng thái:
+      <div id="AccountStatus" class="status-container">Đang cập nhật...</div></label>
+    </div>
+    
+
+
+
     <div class="input-container">
       <label for="fullName">Người thụ hưởng:</label>
       <input type="text" id="fullName" name="fullName" value="SƠN LÝ HỒNG ĐỨC" readonly required>
