--- a/index.html
+++ b/index.html
@@ -41,10 +41,18 @@
     </div>
   
   
-    <div class="input-container">
-      <label for="accountNumber">Số tài khoản:</label>
-      <input placeholder="VD: 0891000650891" type="text" id="accountNumber" name="accountNumber" readonly required>
+<div class="input-container">
+    <label for="accountNumber">Số tài khoản:</label>
+    <div class="account-row">
+        <div class="account-number-column">
+            <input placeholder="VD: 0891000650891" type="text" id="accountNumber" name="accountNumber" readonly required>
+        </div>
+        <div class="copy-button-column">
+            <button id="copyAccountNumberButton" onclick="copyAccountNumber()">Sao chép</button>
+        </div>
     </div>
+</div>
+
   
 
     <div class="input-container">
