--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
       <input type="text" id="fullName" name="fullName" value="SƠN LÝ HỒNG ĐỨC" readonly required>
     </div>
   
-    <div class="input-container">
-      <label for="amount">Số tiền<span class="required"> (*)</span>:</label>
-      <input placeholder="Nhập số tiền (VD: 1.000.000)" type="text" id="amount" name="amount" required>
-    </div>
-  
+<div class="input-container">
+  <label for="amount">Số tiền<span class="required"> (*)</span>:</label>
+<input placeholder="Nhập số tiền (VD: 10,000 VNĐ)" type="number" id="amount" name="amount" min="10000" required oninput="checkAmount()">
+  <div id="amountErrorMessage" style="color: red; display: none;">Số tiền phải lớn hơn hoặc bằng 10.000 VNĐ</div>
+</div>
     <div class="input-container">
       <label for="transferContent">Nội dung chuyển khoản<span class="required"> (*)</span>:</label>
       <textarea placeholder="Nhập nội dung (không dấu)" id="transferContent" name="transferContent" required></textarea>
