--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
   
 <div class="input-container">
   <label for="amount">Số tiền<span class="required"> (*)</span>:</label>
-<input placeholder="Nhập số tiền (VD: 10,000 VNĐ)" type="number" id="amount" name="amount" min="10000" required oninput="checkAmount()">
-  <div id="amountErrorMessage" style="color: red; display: none;">Số tiền phải lớn hơn hoặc bằng 10.000 VNĐ</div>
+  <input placeholder="Nhập số tiền (VD: 10,000 VNĐ)" type="number" id="amount" name="amount" min="10000" required>
 </div>
     <div class="input-container">
       <label for="transferContent">Nội dung chuyển khoản<span class="required"> (*)</span>:</label>
