--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
 <div class="input-container">
   <label for="amount">Số tiền<span class="required"> (*)</span>:</label>
   <input placeholder="Nhập số tiền (VD: 10,000 VNĐ)" type="number" id="amount" name="amount" min="10000" required>
+  <div id="amountError" class="error-message"></div>
 </div>
+
     <div class="input-container">
       <label for="transferContent">Nội dung chuyển khoản<span class="required"> (*)</span>:</label>
       <textarea placeholder="Nhập nội dung (không dấu)" id="transferContent" name="transferContent" required></textarea>
