--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <div class="input-container">
       <label for="AccountStatus">Trạng thái:
-      <div id="AccountStatus" class="status-container">Đang cập nhật...</div></label>
+      <div id="AccountStatus"   class="slhd">Đang tải..., vui lòng chọn ngân hàng</div></label>
     </div>
     
 
