--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <button class="suggestion" onclick="fillAmount(100000)">100,000 VNĐ</button>
       <button class="suggestion" onclick="fillAmount(200000)">200,000 VNĐ</button>
       <button class="suggestion" onclick="fillAmount(300000)">300,000 VNĐ</button>
-      <button class="suggestion" onclick="focusAmountInput()">Nút Khác</button>
+      <button class="suggestion" onclick="focusAmountInput()">Số Khác</button>
     </div>
     
     
